--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ th:last-child{
     padding: 0 10px;
     color: #555;
     cursor: default;
-    width: 100px;
+    width: 100px;s
     display: inline-block;
 }
 .form-btn{
