--- a/src/style.css
+++ b/src/style.css
@@ -65,11 +65,10 @@ p{
     margin: 30px 0;
     border-radius: 30px;
     transition: background 0.5s;
-    
 }
 .btn:hover{
-    background: #035074;
-
+    background: #0f87be;
+    transition: background 0.5s;
 }
 
 .image1{
@@ -495,6 +494,9 @@ form a{
     transition: transform 0.5s;
     
 }
+ 
+
+
 
 
 /*------------media query for menu------------*/
