--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,6 @@ a{
     color:#555;
 }    
 p{
-
     color:#555;
 }
 .container{
@@ -67,7 +66,7 @@ p{
     transition: background 0.5s;
 }
 .btn:hover{
-    background: #0f87be;
+    background: #07577c;
     transition: background 0.5s;
 }
 
